--- a/electron app/RemoveWindow.html
+++ b/electron app/RemoveWindow.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
 	<title>Remove Slide</title>
+	<link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
+	<h1>Remove a Slide</h1>
 	<form>
 		<div>
-			<label>Enter slide index</label>
+			<label>Enter slide index to remove:</label>
 			<input type="number" id="index" autofocus>
 		</div>
 		<button type="submit">Remove Slide</button>
