--- a/electron app/loadSavedWindow.html
+++ b/electron app/loadSavedWindow.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Load a Saved Slide Deck</title>
+	<link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
+	<h1>Load an Existing Deck</h1>
 	<form>
 		<div>
-			<label>Select the file you want to load</label>
+			<label>Select the file you want to load:</label>
 			<input type="file" id="item" autofocus>
 		</div>
 		<button type="submit">Load deck</button>
