--- a/electron app/newSlideDeckWindow.html
+++ b/electron app/newSlideDeckWindow.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Create a new slide deck</title>
+	<link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
+	<h1>Create a New Slide Deck</h1>
 	<form>
 		<div>
-			<label>Enter slide deck title</label>
+			<label>Enter slide deck title:</label>
 			<input type="text" id="item" autofocus>
 		</div>
 		<button type="submit">Open new deck</button>
