--- a/electron app/AddWindow.html
+++ b/electron app/AddWindow.html
@@ -11,7 +11,7 @@
 			<label>Enter slide title: </label><br>
 			<input type="text" id="item" autofocus><br>
 			<label>Enter slide index: </label><br>
-			<input type="number" id="index" min=0><br>
+			<input type="number" id="index" min=0 value=0><br>
 			
 		</div>
 		<button type="submit">Add Slide</button>
