--- a/electron app/RemoveWindow.html
+++ b/electron app/RemoveWindow.html
@@ -9,7 +9,7 @@
 	<form>
 		<div>
 			<label>Enter slide index to remove:</label>
-			<input type="number" id="index" autofocus>
+			<input type="number" id="index" value=0 autofocus>
 		</div>
 		<button type="submit">Remove Slide</button>
 	</form>
